styles/hero.css
section.hero {
    --padding-top: 1rem;
    padding-block: var(--padding-top);
    justify-content: space-between;
    flex-direction: column-reverse;
    gap: 2rem;
    overflow-x: hidden;

    & h1 {
        max-width: 19.5rem;
    }

    & h1 div {
        display: inline-block;
        width: min-content;
        height: 2.5rem;
        overflow: hidden;
        vertical-align: bottom;
    }

    & h1 span {
        display: block;
        animation: slideUp 6s 2s infinite;
    }

    & span:nth-child(1),
    & span:nth-child(4) {
        color: var(--snitap-sky-mid);
    }

    & span:nth-child(2) {
        color: var(--snitap-joy-mid);
    }

    & span:nth-child(3) {
        color: var(--snitap-leaf-mid);
    }

    & .buttons {
        margin-top: 3rem;
        flex-direction: column-reverse;

        & .button {
            border-radius: 5rem;

            transition: scale .350s ease;

            &.buy {
                padding: 1.5rem 3rem;
                background-color: var(--snitap-sun);
            }

            &.play span {
                padding: 1.5rem;
                border-radius: 50%;
                background-color: white;
            }

            &:hover {
                scale: 1.1;
            }
        }

        & .shadow {
            box-shadow:
                0px 2px 5px rgba(0, 0, 0, 0.1),
                0px 9px 9px rgba(0, 0, 0, .09),
                0px 20px 12px rgba(0, 0, 0, .05),
                0px 36px 15px rgba(0, 0, 0, 0.1);
        }
    }

    & > div:nth-child(2) {
        width: 100%;
        max-width: 30.5rem;

        &>.content {
            position: relative;
            width: 100%;
            height: 100%;

            & img:nth-child(1) {
                animation: slideIn 3s .2s ease;
            }

            & img:nth-child(2) {
                position: absolute;
                left: 0;
                animation: slideIn 3s ease;
            }

            & img:nth-child(3) {
                position: absolute;
                left: -.4rem;
                top: 6rem;
                width: 3.5rem;
                animation: slideIn 3s .1s ease;
            }

            & img:nth-child(4) {
                position: absolute;
                right: -.4rem;
                top: 12rem;
                width: 1.8rem;
                animation: slideIn 3s .1s ease;
            }
        }
    }
}

@keyframes slideIn {
    0% {
        transform: translateX(100rem);
    }

    50% {
        transform: translateX(-3rem);
    }
}

@keyframes slideUp {

    0%,
    22% {
        transform: translateY(0);
    }

    23% {
        transform: translateY(calc(-2.5rem - 6px));
    }

    27% {
        transform: translateY(calc(-2.5rem + 8px));
    }

    30% {
        transform: translateY(calc(-2.5rem + 5px));
    }

    30% {
        transform: translateY(calc(-2.5rem - 5px));
    }

    33%,
    55% {
        transform: translateY(-2.5rem);
    }

    56% {
        transform: translateY(calc(-5rem - 6px));
    }

    59% {
        transform: translateY(calc(-5rem + 8px));
    }

    62% {
        transform: translateY(calc(-5rem + 5px));
    }

    62% {
        transform: translateY(calc(-5rem - 5px));
    }

    66%,
    88% {
        transform: translateY(-5rem);
    }

    89% {
        transform: translateY(calc(-7.5rem - 6px));
    }

    92% {
        transform: translateY(calc(-7.5rem + 8px));
    }

    95% {
        transform: translateY(calc(-7.5rem + 5px));
    }

    95% {
        transform: translateY(calc(-7.5rem - 5px));
    }

    100% {
        transform: translateY(-7.5rem);
    }
}

@media (width >= 80rem) {
    section.hero {
        --padding-top: 2.5rem;
        flex-direction: row;

        & h1 {
            max-width: 40rem;
        }

        & h1 div {
            height: 5rem;
        }

        & .buttons {
            flex-direction: row;
        }

        & div:nth-child(2) .content img:nth-child(2) {
            left: -1rem;
        }

        & div:nth-child(2) .content img:nth-child(3) {
            top: 8rem;
            width: unset;
        }

        & div:nth-child(2) .content img:nth-child(4) {
            top: 16rem;
            right: .9rem;
            width: unset;
        }
    }

    @keyframes slideUp {

        0%,
        22% {
            transform: translateY(0);
        }

        23% {
            transform: translateY(calc(-5rem - 15px));
        }

        27% {
            transform: translateY(calc(-5rem + 10px));
        }

        30% {
            transform: translateY(calc(-5rem + 5px));
        }

        30% {
            transform: translateY(calc(-5rem - 5px));
        }

        33%,
        55% {
            transform: translateY(-5rem);
        }

        56% {
            transform: translateY(calc(-10rem - 15px));
        }

        59% {
            transform: translateY(calc(-10rem + 10px));
        }

        60% {
            transform: translateY(calc(-10rem + 5px));
        }

        62% {
            transform: translateY(calc(-10rem - 5px));
        }

        66%,
        88% {
            transform: translateY(-10rem);
        }

        89% {
            transform: translateY(calc(-15rem - 15px));
        }

        92% {
            transform: translateY(calc(-15rem + 10px));
        }

        95% {
            transform: translateY(calc(-15rem + 5px));
        }

        95% {
            transform: translateY(calc(-15rem + 5px));
        }

        100% {
            transform: translateY(-15rem);
        }
    }
}

